k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: microservices-lab
  labels:
    istio-injection: enabled
