k8s/backend.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: microservices-lab
  labels:
    app: backend
    service: backend
spec:
  ports:
  - port: 5000
    name: http
  selector:
    app: backend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: microservices-lab
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
      version: v1
  template:
    metadata:
      labels:
        app: backend
        version: v1
    spec:
      containers:
      - name: backend
        image: microservices-lab-backend:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5000
